Path modification and Nginx changes

--- a/passoire/config/passoire-nginx.conf
+++ b/passoire/config/passoire-nginx.conf
@@ -15,6 +15,9 @@ server
 		allow all;
 	}
 
+	# Disable Directory Browsing
+	autoindex off;
+
 	# Nginx Logging
 	access_log /var/log/nginx/passoire-access.log;
 	error_log /var/log/nginx/passoire-error.log warn;
@@ -25,7 +28,7 @@ server
 	# Permalink Support
 	location /
 	{
-		try_files $uri $uri/ /index.php?$args;
+		try_files $uri $uri/ =404;
 	}
 
 	# PHP Upsteam
