--- a/passoire/config/nginx.conf
+++ b/passoire/config/nginx.conf
@@ -1,3 +1,9 @@
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+error_log /var/log/nginx/error.log;
+include /etc/nginx/modules-enabled/*.conf;
+
 events 
 {
 	multi_accept on;
