--- a/passoire/config/passoire-nginx.conf
+++ b/passoire/config/passoire-nginx.conf
@@ -15,6 +15,12 @@ server
 		allow all;
 	}
 
+	# Disable direct access of uploads directory
+	location /uploads/
+	{
+		deny all;
+	}
+
 	# Disable Directory Browsing
 	autoindex off;
 
